[package]
name = "kaspa-solo"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Enterprise Kaspa Solo Mining Bot - Hardened & Synced to v1.1.0"

[dependencies]
url = "2.5"
feed-rs = "1.5"

# --- AI Vector Search & Streaming Additions ---
# 🛡️ Security Patch: Upgraded to v0.4 to prevent SQLx 0.7.4 vulnerabilities
pgvector = { version = "0.4", features = ["sqlx"] }
async-stream = "0.3.5"
futures-util = "0.3.30"

# Core Frameworks
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7"
teloxide = { version = "0.13", features = ["macros", "webhooks-axum"] }
anyhow = "1.0"
thiserror = "2.0"

# Kaspa Blockchain Protocol (Strictly v1.1.0)
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
dashmap = "6.1"

# Time & Utilities
chrono = "0.4"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
strsim = "0.11.1"
rev_lines = "0.3"
base64 = "0.22.1"

# Networking & System
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
sysinfo = "0.30"
governor = "0.6"
secrecy = "0.10"

# Logging & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 🛡️ PROTECTED: Feature Isolation
# We strictly exclude MySQL to ensure the bot doesn't use the vulnerable RSA code in DB operations.
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }

axum = "0.8.1"

# Binary Hardening
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
serde_nested_with = { git = "https://github.com/murar8/serde_nested_with" }

# [PHASE 5 FIX] Force AI models to be enabled by default during compilation
[features]
default = ["ai_engine"]
ai_engine = []